Issue #5373: Remove restriction on null bytes in docstrings of classes.